# RustGettingStarted

./: .gitignore  docker-compose.yml  prometheus.yml
Prometheus/: Dockerfile  prometheus.yml
csv_reader/: Cargo.toml
csv_reader/src/: main.rs
data/grafana/: grafana.db
data/prometheus/: prometheus.yml
guessing_game/src/: main.rs
hello_world/src/: main.rs
request_test/: Cargo.toml
request_test/data/: data.json
request_test/src/: backup.rs  main.rs  test.py
rki_api/src/: main.rs  structs.rs
rocket_test/: Cargo.toml
rocket_test/src/: main.rs
rust_api/: Cargo.toml  Dockerfile  Rocket.toml  config.toml
rust_api/src/: config.rs  main.rs  request.rs  structs.rs
rust_api_sandbox/: Cargo.toml  Dockerfile
rust_api_sandbox/src/: main.rs
rust_guessing/: Cargo.toml  Dockerfile
testing/: Cargo.toml  Dockerfile
testing/src/: main.rs
too-many-lists/src/: first.rs  second.rs
traits/src/: main.rs
