[package]
name = "rocket_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
chrono = "0.4"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077" }
