[package]
name = "rust_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
exitfailure = "0.5.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1.0.2", features = ["full", "macros"] }
fstrings = "0.1"
warp = "0.2"
parking_lot = "0.10.0"