[package]
name = "rust_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1.11.0", features = ["full", "macros"] }
warp = "0.3.1"
parking_lot = "0.11.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
chrono = "0.4"
