[package]
name = "rust_api_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
chrono = "0.4"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077" }
serde-value = "0.7.0"
mysql = "21.0.1"
thiserror = "1.0.3"
